--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,24 @@ body {
     padding: 32px;
 }
 
+.search-bar-input {
+    background-color: #d8b3ad;
+    border: none;
+    border-radius: 5px;
+    width: 65%;
+    font-size: 15px;
+    padding: 15px 20px;
+}
+
+.search-bar-button {
+    background: #ba8a82;
+    padding: 15px 20px;
+    border-radius: 5px;
+    border: none;
+    color: whitesmoke;
+    font-size: 15px;
+}
+
 
 
 
