--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,11 @@ body {
 
 }
 
+header {
+    border-bottom: 1px solid rgb(252, 247, 248);
+    padding: 30px 0;
+}
+
 .app {
     background: #edddda;
     max-width: 650px;
@@ -31,7 +36,9 @@ body {
     font-size: 15px;
 }
 
-
-
+footer {
+    border-top:1px solid rgb(252, 247, 248);
+    padding: 30px 0;
+}
 
 
