--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,27 @@ header {
     padding: 15px 20px;
 }
 
+.weather-app-temp {
+    font-size: 88px;
+    margin-left: 10px;
+    font-weight: bold;
+    line-height: 88px;
+}
+
+.weather-app-temp-container {
+    display: flex;
+}
+
+.weather-app-details {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+}
+
+.weather-app-icon {
+    margin-top: 22px;
+}
+
 .search-bar-button {
     background: #ba8a82;
     padding: 15px 20px;
